@@ -1,3 +1,8 @@
+2015-01-19 Alexander Malysh <amalysh at kannel.org>
+    * gw/smsc/smpp_pdu.[ch], gw/smsc/smsc_smpp.c, gwlib/cfg.def:
+      added new PDU dump function that allow to dump in one line instead of multiline,
+      for better parsing. It can be switched with new log-format configuration option.
+
 2015-01-02  Stipe Tolj  <stolj at kannel.org>
     * gw/smsc/http/generic.c: fix segfault when starting without specific
       configuration directives for this type.
